[package]
name = "joat"
version = "0.0.1"
authors = ["Vinicius <senna.vmd@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
tera = { version="1.0.0-beta.5" }
yaml-rust = "0.3.5"
reqwest = "0.9.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "1.0.5"
regex= "1"
globwalk = "0.7"
