[package]
name = "joat"
version = "0.0.6"
authors = ["Vinicius <senna.vmd@gmail.com>"]
edition = "2018"
description = "Jack of all trades - CLI tools for REST APIs"
license = "MIT"
readme = "README.md"
keywords = ["cli", "rest", "http", "http", "automation"]
categories = ["command-line-utilities"]
repository = "https://github.com/sennav/joat"

[dependencies]
clap = { version = "~2.33.0", features = ["yaml"] }
tera = { version = "1.0.0-beta.5" }
yaml-rust = "0.3.5"
reqwest = "0.9.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "1.0.5"
regex = "1"
globwalk = "0.7"
terminal_size = "0.1.8"
base64 = "0.9"
oauth2 = { version = "3.0.0-alpha.3" }
rand = "0.6"
url = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
